2011-05-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/specfun.c (humlik):  Initialization would fail whenever y = -1.

2011-05-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_fillbox): Width of filled
	box was off by one unit.

	* src/win/wgraph.c (GetMousePosViewport): Window size is zero for
	minized windows on Vista. Fixes crash when closing plot window in
	minimized state e.g. via taskbar.

	* src/win/wgraph.c (drawgraph): [W_boxfill] Fix inversion of
	transparency. [W_filled_polygon_draw]: Fix transparency in case of
	aliased solid white polygons.

2011-05-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c src/gadgets.c src/gadgets.h src/graphics.c
	src/hidden3d.c src/internal.c term/README: Fix incomplete and incorrect
	initializers found by gcc.

2011-05-14  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph) [W_image]: Clip images as requested.

	* src/win/wgraph.c (WndGraphProc) [WM_KEYDOWN]: Handle VK_CONTROL key
	events again. Fixes ctrl-mousedrag rotation of splots.

	* src/mouse.c (event_keypress): MinGW's toupper() masks out high bits
	required for special keys. Only call for 8bit characters. Fixes
	accelerated rotation with keys (e.g. shift-left) for wxt and windows
	terminals.

	* src/win/wgdiplus.c|h src/win/wgraph.c: Extend support for
	antialiasing of line segments and point symbols. Omit border of
	non-antialiased solid filled polygons.

2011-05-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Avoid use of round() because
	MSVC is still not C99-compliant.

2011-05-13  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert): Make the WIN32 font
	work-around (2009-11-06) conditional on cairo < 2.10. Needs more
	testing.

2011-05-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Cycle through mouse-modes by