@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.242 2011/04/19 20:22:25 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.243 2011/05/06 05:48:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -1684,7 +1684,7 @@ eval_plots()
      * as filling in every thing except the function data. That is done after
      * the xrange is defined.
      */
-    check_for_iteration();
+    check_for_iteration(&plot_iterator);
     while (TRUE) {
 	if (END_OF_COMMAND)
 	    int_error(c_token, "function to plot expected");
@@ -2453,16 +2453,16 @@ eval_plots()
 	}
 
 	/* Iterate-over-plot mechanism */
-	if (empty_iteration() && this_plot) {
+	if (empty_iteration(&plot_iterator) && this_plot) {
 	    this_plot->plot_type = NODATA;
-	} else if (next_iteration()) {
+	} else if (next_iteration(&plot_iterator)) {
 	    c_token = start_token;
 	    continue;
 	}
 
 	if (equals(c_token, ",")) {
 	    c_token++;
-	    check_for_iteration();
+	    check_for_iteration(&plot_iterator);
 	} else
 	    break;
     }
@@ -2545,7 +2545,7 @@ eval_plots()
 	this_plot = first_plot;
 	c_token = begin_token;  /* start over */
 
-	check_for_iteration();
+	check_for_iteration(&plot_iterator);
 
 	/* Read through functions */
 	while (TRUE) {
@@ -2729,7 +2729,7 @@ eval_plots()
 	    }
 
 	    /* Iterate-over-plot mechanism */
-	    if (!in_parametric && next_iteration()) {
+	    if (!in_parametric && next_iteration(&plot_iterator)) {
 		c_token = start_token;
 		continue;
 	    }
@@ -2737,7 +2737,7 @@ eval_plots()
 	    if (equals(c_token, ",")) {
 		c_token++;
 		if (!in_parametric)
-		    check_for_iteration();
+		    check_for_iteration(&plot_iterator);
 	    } else
 		break;
 	}
