@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot3d.c,v 1.184 2010/11/06 22:02:37 juhaszp Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot3d.c,v 1.185 2011/05/06 05:48:25 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot3d.c */
@@ -1276,7 +1276,7 @@ eval_3dplots()
      * well as filling in every thing except the function data. That is done
      * after the x/yrange is defined.
      */
-    check_for_iteration();
+    check_for_iteration(&plot_iterator);
 
     while (TRUE) {
 	if (END_OF_COMMAND)
@@ -1354,7 +1354,8 @@ eval_3dplots()
 
 		/* for capture to key */
 		this_plot->token = end_token = c_token - 1;
-		this_plot->iteration = iteration; /* FIXME: Is this really needed? */
+		/* FIXME: Is this really needed? */
+		this_plot->iteration = plot_iterator.iteration;
 
 		/* this_plot->token is temporary, for errors in get_3ddata() */
 
@@ -1756,7 +1757,7 @@ eval_3dplots()
 		    df_return = get_3ddata(this_plot);
 		    /* for second pass */
 		    this_plot->token = c_token;
-		    this_plot->iteration = iteration;
+		    this_plot->iteration = plot_iterator.iteration;
 
 		    if (this_plot->num_iso_read == 0)
 			this_plot->plot_type = NODATA;
@@ -1788,7 +1789,7 @@ eval_3dplots()
 		    }
 
 		    this_plot->plot_type = DATA3D;
-		    this_plot->iteration = iteration;
+		    this_plot->iteration = plot_iterator.iteration;
 		    this_plot->plot_style = first_dataset->plot_style;
 		    this_plot->lp_properties = first_dataset->lp_properties;
 		    if (this_plot->plot_style == LABELPOINTS) {
@@ -1804,10 +1805,10 @@ eval_3dplots()
 	    } else {		/* not a data file */
 		tp_3d_ptr = &(this_plot->next_sp);
 		this_plot->token = c_token;	/* store for second pass */
-		this_plot->iteration = iteration;
+		this_plot->iteration = plot_iterator.iteration;
 	    }
 
-	    if (empty_iteration())
+	    if (empty_iteration(&plot_iterator))
 		this_plot->plot_type = NODATA;
 
 	}			/* !is_definition() : end of scope of this_plot */
@@ -1821,14 +1822,14 @@ eval_3dplots()
 	}
 
 	/* Iterate-over-plot mechanisms */
-	if (next_iteration()) {
+	if (next_iteration(&plot_iterator)) {
 	    c_token = start_token;
 	    continue;
 	}
 
 	if (equals(c_token, ",")) {
 	    c_token++;
-	    check_for_iteration();
+	    check_for_iteration(&plot_iterator);
 	} else
 	    break;
 
@@ -1905,7 +1906,7 @@ eval_3dplots()
 	/* start over */
 	this_plot = first_3dplot;
 	c_token = begin_token;
-	check_for_iteration();
+	check_for_iteration(&plot_iterator);
 
 	/* why do attributes of this_plot matter ? */
 	/* FIXME HBB 20000501: I think they don't, actually. I'm
@@ -1998,7 +1999,7 @@ eval_3dplots()
 	    }			/* !is_definition */
 
 	    /* Iterate-over-plot mechanism */
-	    if (crnt_param == 0 && next_iteration()) {
+	    if (crnt_param == 0 && next_iteration(&plot_iterator)) {
 		c_token = start_token;
 		continue;
 	    }
@@ -2006,7 +2007,7 @@ eval_3dplots()
 	    if (equals(c_token, ",")) {
 		c_token++;
 		if (crnt_param == 0)
-		    check_for_iteration();
+		    check_for_iteration(&plot_iterator);
 	    } else
 		break;
 
