@@ -1,3 +1,11 @@
+2011-05-22  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* parse.c (check_iteration next_iteration empty_iteration) parse.h
+	plot2d.c plot3d.c set.c unset.c:  Rather than using a single set of
+	global iteration bookkeeping variables, require that each iteration
+	user pass in a structure for bookkeeping.  This allows nested
+	iteration, so long as two different iteration structures are used.
+
 2011-05-16  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/specfun.c (humlik):  Initialization would fail whenever y = -1.
